--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
   <!-- HEADER -->
   <header>
-    <img src="imagenes/perfil.jpg" alt="Foto de perfil" />
+    <img src="imagenes/foto.jpg" alt="Foto de perfil" />
 
     <nav class="nav-links">
       <a href="#hero">Inicio</a>
@@ -177,7 +177,9 @@
       <div class="categoria" onclick="toggle('quices')">Quiz</div>
       <div id="quices" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Quiz 1</a></div>
+          <div class="card-item">
+            <a href="proyectos/quiz1/Ejercicio%20Práctico%201.pdf" download>Quiz 1</a>
+          </div>
         </div>
       </div>
 
@@ -185,8 +187,12 @@
       <div class="categoria" onclick="toggle('parciales')">Parciales</div>
       <div id="parciales" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Parcial 1</a></div>
-          <div class="card-item"><a href="#" download>Parcial 2</a></div>
+          <div class="card-item">
+            <a href="proyectos/parciales/Parcial%201" download>Parcial 1</a>
+          </div>
+          <div class="card-item">
+            <a href="proyectos/parciales/Parcial%202.zip" download>Parcial 2</a>
+          </div>
         </div>
       </div>
 
@@ -194,8 +200,12 @@
       <div class="categoria" onclick="toggle('investigaciones')">Investigaciones</div>
       <div id="investigaciones" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Investigación 1</a></div>
-          <div class="card-item"><a href="#" download>Investigación 2</a></div>
+          <div class="card-item">
+            <a href="proyectos/investigaciones/Investigación%201%20de%20Programación%20I.pdf" download>Investigación 1</a>
+          </div>
+          <div class="card-item">
+            <a href="proyectos/investigaciones/Investigación%202,%20Programación.pdf" download>Investigación 2</a>
+          </div>
         </div>
       </div>
 
@@ -203,8 +213,12 @@
       <div class="categoria" onclick="toggle('labs')">Laboratorios</div>
       <div id="labs" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Laboratorio 1</a></div>
-          <div class="card-item"><a href="#" download>Laboratorio 2</a></div>
+          <div class="card-item">
+            <a href="proyectos/laboratorios/Laboratorio%201,%20Programaciono%20I.pdf" download>Laboratorio 1</a>
+          </div>
+          <div class="card-item">
+            <a href="proyectos/laboratorios/Laboratorio%20Práctica%202,%20programación%20I%205.pdf" download>Laboratorio 2</a>
+          </div>
         </div>
       </div>
 
@@ -212,8 +226,12 @@
       <div class="categoria" onclick="toggle('talleres')">Talleres</div>
       <div id="talleres" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Taller 1</a></div>
-          <div class="card-item"><a href="#" download>Taller 2</a></div>
+          <div class="card-item">
+            <a href="proyectos/talleres/Taller%20Practico%201.pdf" download>Taller 1</a>
+          </div>
+          <div class="card-item">
+            <a href="proyectos/talleres/Taller%20practico%203.pdf" download>Taller 2</a>
+          </div>
         </div>
       </div>
 
@@ -221,7 +239,9 @@
       <div class="categoria" onclick="toggle('practico')">Ejercicio Práctico</div>
       <div id="practico" class="contenido">
         <div class="card-grid">
-          <div class="card-item"><a href="#" download>Ejercicio Único</a></div>
+          <div class="card-item">
+            <a href="proyectos/quiz1/Ejercicio%20Práctico%201.pdf" download>Ejercicio Único</a>
+          </div>
         </div>
       </div>
 
@@ -256,6 +276,8 @@
 
 </body>
 </html>
+
+
 
 
 
