--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       max-width: 1000px;
       border-radius: 20px;
       border: 3px solid #72A3ED;
-      box-shadow: 0 0 30px rgba(114,163,237,0.35);
     }
 
     .categoria {
@@ -61,6 +60,7 @@
       align-items: center;
       justify-content: center;
       gap: 12px;
+      box-shadow: 0 0 15px rgba(114,163,237,0.4);
     }
 
     .flecha {
@@ -88,12 +88,6 @@
       background: rgba(255,255,255,0.92);
       border-radius: 10px;
       border: 2px solid #72A3ED;
-    }
-
-    .lista a {
-      color: #1A2E49;
-      font-weight: bold;
-      text-decoration: none;
     }
 
     .lista li:hover { background: #e0ebff; }
@@ -129,7 +123,11 @@
     </div>
     <div id="parciales" class="contenido">
       <ul class="lista">
-        <li><a href="proyectos/parciales/Parcial 1" target="_blank">Parcial 1</a></li>
+        <li><a href="proyectos/parciales/Parcial 1/Parcial 1.pkt" target="_blank">Parcial 1 - Archivo principal</a></li>
+        <li><a href="proyectos/parciales/Parcial 1/Bisiesto.java" target="_blank">Bisiesto.java</a></li>
+        <li><a href="proyectos/parciales/Parcial 1/CalcularEdad.java" target="_blank">CalcularEdad.java</a></li>
+        <li><a href="proyectos/parciales/Parcial 1/FechasCortas.java" target="_blank">FechasCortas.java</a></li>
+        <li><a href="proyectos/parciales/Parcial 1/SalarioSemanal.java" target="_blank">SalarioSemanal.java</a></li>
         <li><a href="proyectos/parciales/Parcial 2.zip" download>Parcial 2</a></li>
       </ul>
     </div>
@@ -164,23 +162,19 @@ function toggle(id, elemento) {
   const el = document.getElementById(id);
   const flecha = elemento.querySelector(".flecha");
 
-  // Oculta todo excepto el que toca
   document.querySelectorAll(".contenido").forEach(sec => {
     if (sec.id !== id) sec.style.display = "none";
   });
 
   document.querySelectorAll(".flecha").forEach(f => f.classList.remove("abierto"));
 
-  // Alterna visibilidad
   el.style.display = (el.style.display === "block") ? "none" : "block";
-
-  // Flecha
+  
   flecha.classList.toggle("abierto");
 
-  // Scroll hasta mostrar archivos
   setTimeout(() => {
-    const offset = el.offsetTop - 120;
-    window.scrollTo({ top: offset, behavior: "smooth" });
+    const top = el.offsetTop - 120;
+    window.scrollTo({ top, behavior: "smooth" });
   }, 150);
 }
 </script>
