--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     .lista li:hover { background: #e0ebff; }
 
-    /* 🔹 TARJETAS DE CERTIFICADOS */
+    /* 🔹 CERTIFICADOS */
     .cert-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -157,8 +157,8 @@
     <a href="#hero">Inicio</a>
     <a href="#sobre-mi">Sobre mí</a>
     <a href="#proyectos">Proyectos</a>
+    <a href="#certificados">Certificados</a>
     <a href="#habilidades">Habilidades</a>
-    <a href="#certificados">Certificados</a> <!-- 🔹 AGREGADO -->
   </nav>
 </header>
 
@@ -184,7 +184,7 @@
   </div>
 </section>
 
-<!-- PROYECTOS (SIN CAMBIOS) -->
+<!-- PROYECTOS -->
 <section id="proyectos">
   <div class="card">
     <h2>Mis Trabajos Académicos</h2>
@@ -246,15 +246,7 @@
   </div>
 </section>
 
-<!-- HABILIDADES -->
-<section id="habilidades">
-  <div class="card">
-    <h2>Habilidades</h2>
-    <p>Lista de habilidades aquí...</p>
-  </div>
-</section>
-
-<!-- ⭐ NUEVA SECCIÓN → CERTIFICADOS -->
+<!-- ⭐ CERTIFICADOS (MOVIDO ARRIBA) -->
 <section id="certificados">
   <div class="card">
     <h2>Certificados</h2>
@@ -269,6 +261,14 @@
       </div>
     </div>
 
+  </div>
+</section>
+
+<!-- HABILIDADES -->
+<section id="habilidades">
+  <div class="card">
+    <h2>Habilidades</h2>
+    <p>Lista de habilidades aquí...</p>
   </div>
 </section>
 
@@ -296,6 +296,7 @@ function toggle(id, elemento) {
 
 </body>
 </html>
+
 
 
 
