--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
       box-shadow: 0 0 25px rgba(114,163,237,0.6);
     }
 
+    /* 🔹 FOTO DEL HEADER OPTIMIZADA */
     header img {
-      width: 70px;
-      height: 70px;
+      width: 65px;
+      height: 65px;
+      object-fit: cover;
       border-radius: 50%;
       border: 3px solid white;
+      box-shadow: 0 0 10px rgba(255,255,255,0.4);
     }
 
     .nav-links a {
@@ -70,7 +73,7 @@
       text-align: center;
     }
 
-    /* CATEGORIAS SIN FLECHA */
+    /* 🔹 CATEGORÍAS SIN FLECHA */
     .categoria {
       background: #72A3ED;
       color: white;
@@ -79,10 +82,7 @@
       border-radius: 12px;
       cursor: pointer;
       font-size: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 12px;
+      text-align: center;
     }
 
     .contenido { 
@@ -198,14 +198,14 @@
   <div class="card">
     <h2>Mis Trabajos Académicos</h2>
 
-    <div class="categoria" onclick="toggle('quices', this)">Quiz</div>
+    <div class="categoria" onclick="toggle('quices')">Quiz</div>
     <div id="quices" class="contenido">
       <ul class="lista">
         <li><a href="proyectos/quiz1/Ejercicio%20Práctico%201.pdf" target="_blank">Quiz 1</a></li>
       </ul>
     </div>
 
-    <div class="categoria" onclick="toggle('parciales', this)">Parciales</div>
+    <div class="categoria" onclick="toggle('parciales')">Parciales</div>
     <div id="parciales" class="contenido">
       <ul class="lista">
         <li><a href="proyectos/parciales/Parcial%201.zip" download>Parcial 1</a></li>
@@ -213,7 +213,7 @@
       </ul>
     </div>
 
-    <div class="categoria" onclick="toggle('investigaciones', this)">Investigaciones</div>
+    <div class="categoria" onclick="toggle('investigaciones')">Investigaciones</div>
     <div id="investigaciones" class="contenido">
       <ul class="lista">
         <li><a href="proyectos/investigaciones/Investigación%201%20de%20Programación%20I.pdf" target="_blank">Investigación 1</a></li>
@@ -221,7 +221,7 @@
       </ul>
     </div>
 
-    <div class="categoria" onclick="toggle('labs', this)">Laboratorios</div>
+    <div class="categoria" onclick="toggle('labs')">Laboratorios</div>
     <div id="labs" class="contenido">
       <ul class="lista">
         <li><a href="proyectos/laboratorios/Laboratorio%201,%20Programaciono%20I.pdf" target="_blank">Laboratorio 1</a></li>
@@ -229,7 +229,7 @@
       </ul>
     </div>
 
-    <div class="categoria" onclick="toggle('talleres', this)">Talleres</div>
+    <div class="categoria" onclick="toggle('talleres')">Talleres</div>
     <div id="talleres" class="contenido">
       <ul class="lista">
         <li><a href="proyectos/talleres/Taller%20Practico%201.pdf" target="_blank">Taller 1</a></li>
@@ -302,18 +302,18 @@
 function toggle(id) {
   const el = document.getElementById(id);
 
-  // Cerrar los demás
   document.querySelectorAll(".contenido").forEach(sec => {
     if (sec.id !== id) sec.style.display = "none";
   });
 
-  // Abrir/cerrar el seleccionado
   el.style.display = (el.style.display === "block") ? "none" : "block";
 }
 </script>
 
 </body>
 </html>
+
+
 
 
 
